# civ6-mcp

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  DEVLOG-game1.md  DEVLOG-game4.md  DEVLOG-game6.md  DEVLOG.md  LICENSE  README.md  idea_research.md  pyproject.toml  vercel.json
.gemini/: settings.json
.github/workflows/: ci.yml
docs/: README.md  agent-vs-agent.md  architecture-diagrams.md  civ-bench-paper.md  civ-bench-proposal.md  cross-game-analysis.md  feature-ideas.md  game4-review.md  observability.md  save-file-format.md
docs/agent-essays/: the-hallucination-of-competence.md
docs/devlog/: README.md  game2.md  game5.md  game7.md  game_003_macedon_alexander.md  game_004_byzantium_basil.md  game_008_scythia_tomyris.md  game_009_england_victoria.md  game_010_india_chandragupta.md  game_011_mali_mansa_musa.md  (+1 more)
evals/: .env.example  civbench.py  metrics.py  prompts.py  runner.py  scan.yaml  scenarios.py  scorer.py
fixtures/: README.md  diary_demo_elo1.jsonl  diary_demo_elo2.jsonl  diary_demo_elo3.jsonl  diary_demo_elo4.jsonl  diary_demo_model_pill_20260224.jsonl  load.sh  log_demo_elo1.jsonl  log_demo_elo2.jsonl  log_demo_elo3.jsonl  log_demo_elo4.jsonl
research/: bypassing_aspyr_launcher.md  inspect_ai_agent_architectures.md
scripts/: convex_sync.py  extract_tool_docs.py  install_saves.py  launch_save.py  parse_save.py  scrape_wiki_images.py  split_game_log.py  test_connection.py  test_game_state.py  test_queries.py
web/: mdx-components.tsx  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json  vitest.config.ts
(+164 files in other folders)
